# rag_examples

./: README.md
docs/: 01-reranking.md  02-agentic-rag.md  03-knowledge-graphs.md  04-contextual-retrieval.md  05-query-expansion.md  06-multi-query-rag.md  07-context-aware-chunking.md  08-late-chunking.md  09-hierarchical-rag.md  10-self-reflective-rag.md  11-fine-tuned-embeddings.md
examples/: 01_reranking.py  02_agentic_rag.py  03_knowledge_graphs.py  04_contextual_retrieval.py  05_query_expansion.py  06_multi_query_rag.py  07_context_aware_chunking.py  08_late_chunking.py  09_hierarchical_rag.py  10_self_reflective_rag.py  11_fine_tuned_embeddings.py  README.md
implementation/: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  STRATEGIES.md  cli.py  docker-compose.yml  pyproject.toml  rag_agent.py  rag_agent_advanced.py  requirements-advanced.txt
implementation/documents/: audio-recording-2025-05-22T21-01-10-793Z.webm  audio-recording-2025-05-22T21-48-53-787Z.webm
implementation/ingestion/: chunker.py  contextual_enrichment.py  ingest.py
implementation/sql/: removeDocuments.sql  schema.sql
implementation/utils/: db_utils.py  models.py  providers.py
